--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "homepage": "https://github.com/karmakoder/alexa-opentable#readme",
   "dependencies": {
     "express": "^4.13.4",
-    "phantomjs": "^2.1.7",
+    "node-horseman": "^3.0.1",
+    "phantom": "^2.1.3",
     "restler": "^3.4.0",
-    "supervisor": "^0.10.0"
+    "supervisor": "^0.10.0",
+    "webpage": "^0.3.0"
   }
 }
